# smart-support-system

./: README.md  docker-compose.yml  main.py  pyproject.toml  worker.py
app/api/: classify.py  history.py  result.py
app/core/: celery_app.py  config.py  db.py  utils.py
app/jobs/: tasks.py
app/services/: triage.py
